traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Erreur de compilation :
TraversalDiagonal:5: error: overriding method avance in class SimpleBuggle of type (x$1: Int)Unit;
 method avance needs `override' modifier
def avance(diag:Int):Int={
    ^TraversalDiagonal:5: error: overriding method avance in class AbstractBuggle of type (x$1: Int)Unit;
 method avance needs `override' modifier
def avance(diag:Int):Int={
    ^